Simplify pipeline; profile ci-populate-cache is no longer needed

--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -16,10 +16,6 @@ inputs:
     description: The Java version to use
     default: '17'
     required: true
-  owasp-cache-name:
-    description: The name of the owasp data cache.
-    default: owasp-cache
-    required: true
   owasp-data-cache:
     description: The name of the owasp data cache.
     default: owasp-data-cache
@@ -38,24 +34,6 @@ runs:
         java-version: ${{ inputs.java-version }}
         version: ${{ inputs.graalvm-version }}
 
-    - name: OWASP cache
-      id: owasp-cache
-      uses: actions/cache@v4
-      with:
-        key: ${{ inputs.owasp-data-cache }}
-        path: ${{ github.workspace }}/${{ inputs.owasp-data-cache }}
-
-    - name: Populate OWASP ata Cache
-      if: ${{ steps.owasp-cache.outputs.cache-hit != 'true' }}
-      shell: sh
-      run: |
-        ./mvnw \
-          --batch-mode \
-          --color always \
-          --define ci-populate-cache \
-          --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
-          dependency-check:update-only
-
     - name: Populate Maven Cache
       if: ${{ steps.setup.outputs.cache-hit != 'true' }}
       shell: sh
@@ -63,10 +41,26 @@ runs:
         ./mvnw \
           --batch-mode \
           --color always \
-          --define ci-populate-cache \
           --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
           quarkus:go-offline \
           de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
+
+    - name: OWASP cache
+      id: owasp-cache
+      uses: actions/cache@v4
+      with:
+        key: ${{ inputs.owasp-data-cache }}
+        path: ${{ github.workspace }}/${{ inputs.owasp-data-cache }}
+
+    - name: Populate OWASP data cache
+      if: ${{ steps.owasp-cache.outputs.cache-hit != 'true' }}
+      shell: sh
+      run: |
+        ./mvnw \
+          --batch-mode \
+          --color always \
+          --define dataDirectory=${{ github.workspace }}/${{ inputs.owasp-data-cache }} \
+          dependency-check:update-only
 
     - name: Cancel Build
       if: ${{ failure() }}
