--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
     paths-ignore:
       - '**.gitignore'
       - 'CODEOWNERS'
-      - 'LICENSE'
+      - 'LICENSE.txt'
       - '**.md'
       - '**.adoc'
       - '**.txt'
@@ -17,7 +17,7 @@ on:
     paths-ignore:
       - '**.gitignore'
       - 'CODEOWNERS'
-      - 'LICENSE'
+      - 'LICENSE.txt'
       - '**.md'
       - '**.adoc'
       - '**.txt'
