--- a/.github/actions/populate-cache/action.yml
+++ b/.github/actions/populate-cache/action.yml
@@ -33,6 +33,12 @@ runs:
         java-version: ${{ inputs.java-version }}
         version: ${{ inputs.graalvm-version }}
 
+    - name: OWASP DB Cache
+      uses: actions/cache@v4
+      with:
+        path: owasp-db
+        key: owasp-db
+
     - name: Populate Cache
       if: ${{ steps.setup.outputs.cache-hit != 'true' }}
       shell: sh
@@ -41,6 +47,7 @@ runs:
           --batch-mode \
           --color always \
           --define ci-populate-cache \
+          --define dataDirectory=owasp-db \
           --define nvdApiKey=${{ inputs.nvd-api-key }} \
           verify \
           quarkus:go-offline \
