Set publish-report to v2

--- a/.github/actions/owasp-scan/action.yml
+++ b/.github/actions/owasp-scan/action.yml
@@ -82,7 +82,7 @@ runs:
 
     - name: Publish Report
       if: ${{ always() }}
-      uses: turing85/publish-report@main
+      uses: turing85/publish-report@v2
       with:
         report-list-tests: failed
         report-name: OWASP Scan
