--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <quarkus.docker.dockerfile-native-path>src/main/container/Containerfile.native-distroless</quarkus.docker.dockerfile-native-path>
     <quarkus.docker.dockerfile-jvm-path>src/main/container/Containerfile.temurin</quarkus.docker.dockerfile-jvm-path>
     <quarkus-maven-plugin.skip>false</quarkus-maven-plugin.skip>
-    <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel-builder-image:23.1.2.0-Final-java21@sha256:d7b566375314c545ec854c7aba46950e54a8536e636926935ac513d7c312d2f3</quarkus.native.builder-image>
+    <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel-builder-image:23.1.3.1-Final-java21-2024-05-10@sha256:c3d940fbb143206ed868bffb7ad68b9fef0e704ecfeee2459fea71e003383f92</quarkus.native.builder-image>
     <quarkus.native.container-build>true</quarkus.native.container-build>
     <skipITs>false</skipITs>
   </properties>
