Add <proc>full</proc> to compiler plugin configuration

--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
           <compilerArgs>
             <arg>-parameters</arg>
           </compilerArgs>
+          <proc>full</proc>
         </configuration>
       </plugin>
       <plugin>
