--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <quarkus-maven-plugin.skip>false</quarkus-maven-plugin.skip>
     <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel-builder-image:23.1.3.1-Final-java21-2024-07-14@sha256:5f4e96cc1b7b085ab196afadb6f36cb9f0a9e6ebbc02a15be3a4260b22e5f6f6</quarkus.native.builder-image>
     <quarkus.native.container-build>true</quarkus.native.container-build>
+    <surefire-plugin.skip>false</surefire-plugin.skip>
     <skipITs>false</skipITs>
   </properties>
 
@@ -168,6 +169,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${surefire-plugin.version}</version>
         <configuration>
+          <skip>${surefire-plugin.skip}</skip>
           <systemPropertyVariables>
             <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             <maven.home>${maven.home}</maven.home>
@@ -350,6 +352,22 @@
       <properties>
         <formatter-maven-plugin.goal>validate</formatter-maven-plugin.goal>
         <impsort-maven-plugin.goal>check</impsort-maven-plugin.goal>
+      </properties>
+    </profile>
+    <profile>
+      <id>ci-native-compressed</id>
+      <activation>
+        <property>
+          <name>ci-native-compressed</name>
+        </property>
+      </activation>
+      <properties>
+        <formatter-maven-plugin.goal>validate</formatter-maven-plugin.goal>
+        <impsort-maven-plugin.goal>check</impsort-maven-plugin.goal>
+        <quarkus.container-image.additional-tags>native</quarkus.container-image.additional-tags>
+        <quarkus.docker.dockerfile-native-path>src/main/container/Containerfile.native-distroless-compressed</quarkus.docker.dockerfile-native-path>
+        <quarkus.native.enabled>true</quarkus.native.enabled>
+        <surefire-plugin.skip>true</surefire-plugin.skip>
       </properties>
     </profile>
     <profile>
