--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,5 +65,7 @@ jobs:
         verify
         quarkus:go-offline
         de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
+
+      run-owasp: true
     secrets:
       nvd-api-key: ${{ secrets.NVD_API_KEY }}
