--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,13 +33,36 @@ permissions:
   pull-requests: write
 
 jobs:
-  build:
-    name: Build
-    uses: turing85/shared-github-workflows/.github/workflows/java-quarkus-single-module-build.yml@main
+  recreate-comment:
+    name: Recreate Comment
+    uses: turing85/shared-github-workflows/.github/workflows/recreate-comment.yml@main
+
+  populate-cache:
+    name: Populate cache
+    uses: turing85/shared-github-workflows/.github/workflows/java-populate-cache.yml@main
     with:
       graalvm-distribution: mandrel
       graalvm-version: mandrel-23.1.2.0-Final
       java-version: 21
+
+      maven-opts: >-
+        --batch-mode
+        --color always
+        --define ci-populate-cache
+      maven-targets: >-
+        verify
+        quarkus:go-offline
+        de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
+
+  build:
+    name: Build
+
+    needs:
+      - populate-cache
+      - recreate-comment
+
+    uses: turing85/shared-github-workflows/.github/workflows/java-quarkus-single-module-build.yml@main
+    with:
       maven-opts-jvm: >-
         --batch-mode
         --color always
@@ -50,22 +73,27 @@ jobs:
         --color always
         --define build-container-image
         --define ci-native-compressed
-      maven-opts-owasp: >-
+      maven-targets-jvm: verify
+      maven-targets-native: verify
+
+  owasp-scan:
+    name: OWASP Scan
+
+    needs:
+      - populate-cache
+      - recreate-comment
+
+    uses: turing85/shared-github-workflows/.github/workflows/java-owasp-scan.yml@main
+    with:
+      graalvm-distribution: mandrel
+      graalvm-version: mandrel-23.1.2.0-Final
+      java-version: 21
+
+      maven-opts: >-
         --batch-mode
         --color always
         --define ci-owasp
-      maven-opts-populate: >-
-        --batch-mode
-        --color always
-        --define ci-populate-cache
-      maven-targets-jvm: verify
-      maven-targets-native: verify
-      maven-targets-owasp: org.owasp:dependency-check-maven:check
-      maven-targets-populate: >-
-        verify
-        quarkus:go-offline
-        de.qaware.maven:go-offline-maven-plugin:resolve-dependencies
+      maven-targets: org.owasp:dependency-check-maven:check
 
-      run-owasp: true
     secrets:
       nvd-api-key: ${{ secrets.NVD_API_KEY }}
