Pass token as secret

--- a/.github/workflows/cleanup-caches-after-merge.yml
+++ b/.github/workflows/cleanup-caches-after-merge.yml
@@ -12,3 +12,5 @@ jobs:
   cleanup:
     name: Build
     uses: turing85/shared-github-workflows/.github/workflows/delete-branch-caches.yml@main
+    secrets:
+      github-token: ${{ secrets.GITHUB_TOKEN }}
