--- a/.github/workflows/cleanup-caches-after-merge.yml
+++ b/.github/workflows/cleanup-caches-after-merge.yml
@@ -1,4 +1,4 @@
-name: Cleanup caches after merge
+name: Cleanup branch caches after merge
 on:
   pull_request:
     types:
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   cleanup:
-    name: Build
-    uses: turing85/shared-github-workflows/.github/workflows/delete-branch-caches.yml@main
+    name: Cleanup branch caches after merge
+    uses: turing85/shared-github-workflows/.github/workflows/cleanup-branch-caches.yml@main
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
