--- a/.github/workflows/cleanup-caches-after-merge.yml
+++ b/.github/workflows/cleanup-caches-after-merge.yml
@@ -3,7 +3,6 @@ on:
   pull_request:
     types:
       - closed
-  workflow_dispatch:
 
 permissions:
   actions: write
@@ -12,5 +11,7 @@ jobs:
   cleanup:
     name: Cleanup branch caches after merge
     uses: turing85/shared-github-workflows/.github/workflows/cleanup-branch-caches.yml@main
+    with:
+      branch-name: refs/pull/${{ github.event.pull_request.number }}/merge
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
